--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,7 @@ name = "scholar-bbs"
 main = "src/index.js"
 compatibility_date = "2024-10-11"
 compatibility_flags = ["nodejs_compat"]
+pages_build_output_dir = "./static"
 
 # Workers Logs
 # Docs: https://developers.cloudflare.com/workers/observability/logs/workers-logs/
