修改了运行的简化指令，但是仍然不生效

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev",
+    "build": "wrangler deploy",
+    "dev": "wrangler pages dev",
+    "start": "wrangler pages dev",
     "test": "vitest"
   },
   "devDependencies": {
