--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,7 @@
 name = "scholar-bbs"
 compatibility_date = "2024-10-11"
 compatibility_flags = ["nodejs_compat"]
-pages_build_output_dir = "./static"
+pages_build_output_dir = "."
 
 # Workers Logs
 # Docs: https://developers.cloudflare.com/workers/observability/logs/workers-logs/
